# sinapze

./: .env.example  .gitignore  CLAUDE.md  README.md  build_static.py  pyproject.toml  web.py
.sinapze/: cards__N1.json  scope__N1.json
docs/: N1.apkg  index.html
examples/: quickstart.py
medstudy/: __init__.py  cli.py  config.py  export.py  generate.py  ingest.py  llm.py  plan.py  prompts.py  scope.py
sinapze/: __init__.py  cli.py  config.py  export.py  generate.py  ingest.py  llm.py  models.py  plan.py  prompts.py  scope.py
