[project]
name = "sinapze"
version = "0.1.0"
description = "Source-grounded study guide and Anki deck generator for medical school"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.39.0",
    "pypdf>=5.0.0",
    "python-frontmatter>=1.1.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "click>=8.1.7",
    "rich>=13.7.0",
    "genanki>=0.13.1",
    "tenacity>=8.5.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
sinapze = "sinapze.cli:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sinapze*"]
